Fix arrow jank, nav scrollbar, header dropdown wrap.

--- a/app/styles/mycrypto-nav.less
+++ b/app/styles/mycrypto-nav.less
@@ -14,15 +14,35 @@
       &:after {
         content: none;
       }
+
+      @media screen and (max-width: @screen-sm) {
+        padding: 0;
+        justify-content: center;
+        flex-wrap: wrap;
+
+        > * {
+          width: 100%;
+        }
+      }
     }
   }
   .header__dropdowns {
     align-self: flex-end;
     display: flex;
     align-items: center;
+
+    @media screen and (max-width: @screen-sm) {
+      border-top: 1px solid @gray-lighter;
+    }
+
     .dropdown {
       text-align: center;
       border-left: 1px solid @gray-lighter;
+      height: 100%;
+
+      @media screen and (max-width: @screen-sm) {
+        flex: 1;
+      }
 
       &:last-child {
         @media screen and (min-width: @screen-md) {
@@ -39,6 +59,7 @@
         font-size: .85rem;
         color: @gray-dark;
         position: relative;
+        white-space: nowrap;
         &:after {
           content:"";
           width: 0;
@@ -79,6 +100,8 @@
   .header__brand {
     align-self: flex-start;
     display: flex;
+    justify-content: center;
+
     img {
       padding: .25rem 0;
       max-width: 166px;
@@ -104,10 +127,13 @@
 
 
 // Navigation
+@nav-height: 2.1rem;
+@nav-bg: #fbfbfb;
 .nav-container {
   position: relative;
-  overflow-y: hidden;
-  background: #fbfbfb;
+  overflow: hidden;
+  height: @nav-height;
+  background: @nav-bg;
   .nav-scroll {
     overflow-x: auto;
     margin-bottom: -20px;
@@ -177,8 +203,10 @@
     background-color: white;
     bottom: 12px;
     color: #d6d6d6;
+    height: @nav-height;
+    line-height: @nav-height - @space-xs;
+    padding-bottom: @space-xs;
     font-size: 33px;
-    line-height: 1.3;
     min-width: 50px;
     position: absolute;
     top: 0;
@@ -187,11 +215,12 @@
     z-index: 999;
     &:hover {
       text-decoration: none;
+      opacity: 1 !important;
     }
   }
   .nav-arrow-right {
     right: 3%;
-    background: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 47%,rgba(255,255,255,1) 100%);
+    background: linear-gradient(to right, fade(@nav-bg, 0%) 0%, fade(@nav-bg, 100%) 47%, fade(@nav-bg, 100%) 100%);
     padding-right: 5px;
     text-align: right;
     @media screen and (max-width: @screen-sm) {
